--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 * {
 	text-align: center;
 }
+
+h1 {
+	margin: 120px 30px 50px;
+	font-size: 70px;
+	color: white;
+}
+
+html,body{
+    height: 100%;
+	width:100%;
+}
+
+div {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	height: 100%;
+	width: 100%;
+	background: url("img/login.jpg") no-repeat center;
+	background-size: 100% ;
+}
+
+input {
+	margin: 10px 20px;
+	width: 200px;
+	height: 20px;
+	size: 10px;
+	border: 3px solid orange;
+	border-radius: 5px
+}
