--- a/style.css
+++ b/style.css
@@ -2,29 +2,47 @@
 	text-align: center;
 }
 
+
+body,html{
+	margin:0;
+	height: 100%;
+}
+
+.fullscreen {
+	margin: 0 !important;
+	background-image: url("img/login.jpg");
+	position: fixed;
+	opacity: 0.85;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
+	width: 100%;
+	
+}
+
+.field {
+	margin: 150px 0;
+}
+
 h1 {
-	margin: 0px 0px 0px;
-	font-size: 70px;
+	margin: 0 0 50px 0;
+	font-size: 50px;
 	color: white;
 }
 
-html,body{
-	top: 0px;
-	right: -1px;
-	height: 100%;
-	width: 100%;
-	background: url("img/login.jpg") no-repeat center;
-	background-size: 100% ;
-}
-
-div {
-}
-
 input {
-	margin: 10px 0px;
+	/*margin: 10px 0px;*/
+	margin: 0 0 20px 0;
 	width: 200px;
 	height: 20px;
-	size: 10px;
+	font-size: 15px;
 	border: 3px solid orange;
 	border-radius: 5px
+}
+
+button {
+	width: 80px;
+	height: 40px;
+	font-size: 20px;
 }
