--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -17,4 +17,4 @@
 <p>
 	請輸入請假事由
 </p>
-<textarea name="" id="reason" cols="30" rows="10"></textarea>
+<textarea name="" id="reason" cols="30" rows="10" maxlength="100"></textarea>
