--- a/employee/style.css
+++ b/employee/style.css
@@ -8,6 +8,38 @@ body,html{
 	height: 100%;
 }
 
-textarea{
+#full{
+	position: relative;
+}
+
+#reason{
 	text-align: left;
+	resize: none;
+}
+
+#viewdata:hover{
+	opacity: 1;
+}
+
+#newdayoff:hover{
+	opacity: 1;
+}
+
+.btndiv{
+	float: inline-start;
+	width: 50%;
+	height: 40%;
+}
+
+.menubtn{
+	border: none;
+	cursor: pointer;
+	appearance: none;
+	background-color: inherit;
+	opacity: 0.7;
+}
+
+.menubtni{
+	width: 100%;
+	height: 300px;
 }
