--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -18,6 +18,6 @@
 	請輸入請假事由
 </p>
 <textarea name="" id="reason" cols="30" rows="10" maxlength="100"></textarea>
-<button id = "employee.">
+<button onclick="goback()">
 	返回請假專區
 </button>
