--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -18,6 +18,11 @@
 	請輸入請假事由
 </p>
 <textarea name="" id="reason" cols="30" rows="10" maxlength="100"></textarea>
+<br>
+<br>
+<button onclick=" ">
+	確定請假
+</button>
 <button onclick="goback()">
 	返回請假專區
 </button>
