--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -12,7 +12,7 @@
 		請輸入請假結束時間
 	</p>
 	<input id="endTime" type="date" />
-	<button id="endToday">AWA</button>
+	<!-- <button id="endToday">AWA</button> -->
 </div>
 <p>
 	請輸入請假事由
