--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -1,28 +1,55 @@
 <h1>
 	員工請假專區
 </h1>
+
+<div id = "Choose_a_vacation">
+	<select>
+		<option>選擇假別</option>
+    	<option>特休假</option>
+   		<option>事假</option>
+    	<option>家庭照顧假</option>
+   		<option>普通傷病假</option>
+    	<option>婚假</option>
+    	<option>喪假</option>
+		<option>分娩假</option>
+		<option>產檢假</option>
+		<option>流產假</option>
+		<option>陪產假</option>
+		<option>產假</option>
+	</select>
+</div>
+
 <div id="start">
 	<p>
-		請輸入請假開始時間
+		輸入請假開始的時間
 	</p>
-	<input id="startTime" type="date" />
+	<input id="startTime" type="datetime-local" />
 </div>
+
 <div id="end">
 	<p>
-		請輸入請假結束時間
+		輸入請假結束時間
 	</p>
-	<input id="endTime" type="date" />
-	<!-- <button id="endToday">AWA</button> -->
+	<input id="endTime" type="datetime-local" />
 </div>
+
+<br>
+
+<div id = "reason">
+	<input id="reason" type="text" placeholder = "輸入事由" />
+</div>
+
 <p>
-	請輸入請假事由
+	上傳請假證明
 </p>
-<textarea name="" id="reason" cols="30" rows="10" maxlength="100"></textarea>
+<input id = "prove" type = "file">
 <br>
 <br>
 <button onclick=" ">
 	確定請假
 </button>
+<br>
+<br>
 <button onclick="goback()">
 	返回請假專區
 </button>
