--- a/css/admin.css
+++ b/css/admin.css
@@ -8,41 +8,9 @@ body,html{
 	height: 100%;
 }
 
-#full{
-	position: relative;
-}
 
-#reason{
-	text-align: left;
-	resize: none;
-}
 
-#viewdata:hover{
-	opacity: 1;
-}
 
-#newdayoff:hover{
-	opacity: 1;
-}
-
-.btndiv{
-	float: inline-start;
-	width: 50%;
-	height: 40%;
-}
-
-.menubtn{
-	border: none;
-	cursor: pointer;
-	appearance: none;
-	background-color: inherit;
-	opacity: 0.7;
-}
-
-.menubtni{
-	width: 100%;
-	height: 300px;
-}
 
 /* 請假卡 */
 #card{
@@ -71,7 +39,14 @@ body,html{
 	height: 60px;
 }
 
-#cancel{
+#approve{
+	position: absolute;
+	bottom: 12px;
+	left: 20px;
+	width: 100px;
+	height: 30px;
+}
+#disapprove{
 	position: absolute;
 	bottom: 12px;
 	right: 20px;
