--- a/employee/templates/employeeTemp.html
+++ b/employee/templates/employeeTemp.html
@@ -1,4 +1,6 @@
-<h1>
+<!DOCTYPE html>
+<html>
+	<h1>
 	員工請假專區
 </h1>
 <div class="btndiv" id="viewDataDiv">
@@ -13,3 +15,4 @@
 		<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
 	</button>
 </div>
+</html>
