--- a/employee/templates/Check_in.html
+++ b/employee/templates/Check_in.html
@@ -2,9 +2,12 @@
 <html>
 
     <head>
-        <title>
-            祐肯請假系統
-        </title>
+		<title>祐肯請假系統</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+        <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
     </head>
 
     <body>
