--- a/employee/templates/newdayoff.html
+++ b/employee/templates/newdayoff.html
@@ -1,4 +1,17 @@
-<h1>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>祐肯請假系統</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+        <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
+	</head>
+	
+	<body>
+
+		<h1>
 	員工請假專區
 </h1>
 
@@ -53,3 +66,7 @@
 <button onclick="goback()">
 	返回請假專區
 </button>
+
+	</body>
+
+</html>
