--- a/employee/templates/viewdata.html
+++ b/employee/templates/viewdata.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>祐肯請假系統</title>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+        <script src="../js/jquery-3.7.1.min.js"></script>
+        <script src="../js/cookieOperation.js"></script>
 		<link rel="stylesheet" href="style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="script.js"></script>
