--- a/css/員工請假資訊.css
+++ b/css/員工請假資訊.css
@@ -1,5 +1,6 @@
 body,html{
-    text-align: center; 
+    position: fixed; 
+    left: 50px;
 }
 
 table{
@@ -7,9 +8,8 @@ table{
     border: 2px solid rgb(140 140 140);
     font-family: sans-serif;
     font-size: 0.8rem;
-    letter-spacing: 1px;
-    margin-left:auto; 
-    margin-right:auto;
+    letter-spacing: 3px;
+    padding-left: 0%;
 }
   
 thead,tfoot{
@@ -18,11 +18,10 @@ thead,tfoot{
   
 th,td {
     border: 2px solid rgb(160 160 160);
-    padding: 8px 100px;
-}
-  
-td:last-of-type{
-    text-align: center;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
 .search{
