--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -53,10 +53,11 @@ button {
 }
 
 #version {
-	color: white;
-	position: absolute;
-	right: 20px;
+	color: black;
+	position: fixed;
+	right: 1%;
 	bottom: 0;
+    text-align: end;
 }
 
 p {
