--- a/css/admin.css
+++ b/css/admin.css
@@ -71,3 +71,17 @@ body,html{
 	text-align: left;
     transform: translate(0,-50%);
 }
+
+
+.button{
+	font-size: 300%;
+}
+
+
+#version {
+	color: black;
+	position: fixed;
+	right: 1%;
+	bottom: 0;
+    text-align: end;
+}
