--- a/css/admin.css
+++ b/css/admin.css
@@ -1,11 +1,6 @@
-* {
-	text-align: start;
-}
-
-
 body,html{
-	margin:0;
-	height: 100%;
+	position: fixed; 
+    left: 50px;
 }
 
 /* 請假卡 */
@@ -74,7 +69,7 @@ body,html{
 
 
 .button{
-	font-size: 300%;
+	font-size: 250%;
 }
 
 
