--- a/css/假單審核.css
+++ b/css/假單審核.css
@@ -27,14 +27,19 @@ table{
 
 
 th{
-    border: 2px solid rgb(160 160 160);
+    outline: 1px solid rgb(160 160 160);
     background-color: rgb(228 240 245);
     text-align: left;
 }
 
 
 td{
-    border: 2px solid rgb(160 160 160);
+    outline: 1px solid rgb(160 160 160);
+}
+
+
+#button{
+    text-align: end;
 }
 
 
