8/12,html開頭code整理，假單審核js還沒處理完

--- a/css/newDayoff.css
+++ b/css/newDayoff.css
@@ -20,3 +20,12 @@ body,html{
     width: 100%;
     /* background-color: aliceblue; */
 }
+
+
+#version {
+	color: black;
+	position: fixed;
+	right: 1%;
+	bottom: 0;
+    text-align: end;
+}
