--- a/css/admin.css
+++ b/css/admin.css
@@ -1,84 +1,47 @@
-body,html{
-	position: fixed; 
-    left: 50px;
-}
-
-/* 請假卡 */
-#card{
-	/* margin: 50px 0 0 0; */
-	background-color: aqua;
-	width: 100%;
-	height: 300px;
-}
-
-#profile{
-	background-color: rgb(255, 251, 0);
-	width: 100%;
-	height: 60px;
-}
-
-#time{
-	background-color: rgb(0, 255, 136);
-	width: 100%;
-	height: 180px;
-}
-
-#btn{
-	position: relative;
-	background-color: rgb(85, 0, 255);
-	width: 100%;
-	height: 60px;
-}
-
-#approve{
-	position: absolute;
-	bottom: 12px;
-	left: 20px;
-	width: 100px;
-	height: 30px;
-}
-#disapprove{
-	position: absolute;
-	bottom: 12px;
-	right: 20px;
-	width: 100px;
-	height: 30px;
-}
-
-.cardFont{
-	position: relative;
+html, body{
+    height: 100%;
 	padding: 0;
-	margin: 0;
-	margin: 0;
+  	margin: 0;
 }
 
-#offTime{
-	font-size: 30px;
-	top: 50%;
-    transform: translate(0,-50%);
+
+.wrapper{
+    min-height: 100%;
 }
 
-#employeeID{
-	/* position: relative; */
-	padding-left: 10px;
-	font-size: 20px;
-	top: 50%;
-	text-align: left;
-    transform: translate(0,-50%);
+
+.header{
+	padding: 10px;
+  	background-color: rgb(199, 199, 249);
+}
+
+
+.title{
+	font-size: 75px;
+}
+
+
+.img{
+	float:right;
+	width: 150px;
+}
+
+
+.main{
+  	padding: 15px;
 }
 
 
 .button{
-	font-size: 250%;
+	font-size: 40px;
 	width: 260px;
 	text-align: left;
 }
 
 
-#version {
-	color: black;
-	position: fixed;
-	right: 1%;
-	bottom: 0;
-    text-align: end;
+.footer{
+    position: absolute;
+    bottom: 0;
+	right: 20px;
+	font-size: 20px;
 }
