--- a/css/假單審核.css
+++ b/css/假單審核.css
@@ -1,16 +1,45 @@
 body,html{
+    height: 100%;
+	padding: 0;
+  	margin: 0;
+}
+
+
+.wrapper{
+    min-height: 100%;
+}
+
+
+.header{
+	padding: 10px;
+  	background-color: rgb(199, 199, 249);
+}
+
+
+.title{
+	font-size: 75px;
+}
+
+
+.img{
+	float:right;
+	width: 150px;
+}
+
+
+aside{
+    position: absolute;
+}
+
+
+nav{
+    font-size: 35px;
+}
+
+
+#list{
     text-align: center;
-}
-
-
-h1{
-    font-size: 290%;
-    line-height: 10%;
-}
-
-
-button{
-	font-size: 100%;
+    padding: 15px;
 }
 
 
@@ -35,15 +64,22 @@ td{
 }
 
 
+button{
+	font-size: 100%;
+}
+
+
 .btn{
     text-align: center;
 }
 
 
-#version {
-	color: black;
-	position: fixed;
-	right: 1%;
-	bottom: 0;
-    text-align: end;
+.footer{
+    position: absolute;
+    bottom: 0;
+	right: 20px;
+	font-size: 20px;
 }
+
+
+
