--- a/css/休假行事曆.css
+++ b/css/休假行事曆.css
@@ -1,18 +1,47 @@
 body,html{
-    position: fixed; 
-    left: 2%;
+    height: 100%;
+	padding: 0;
+  	margin: 0;
 }
 
 
-h1{
-    font-size: 230%;
-    line-height: 10%;
+.wrapper{
+    min-height: 100%;
+}
+
+
+.header{
+	padding: 10px;
+  	background-color: rgb(199, 199, 249);
+}
+
+
+.title{
+	font-size: 75px;
+}
+
+
+.img{
+	float:right;
+	width: 150px;
+}
+
+
+aside{
+    position: absolute;
+}
+
+
+nav{
+    font-size: 35px;
 }
 
 
 table{
     border-collapse: collapse;
     border: 2px solid rgb(140 140 140);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -28,13 +57,13 @@ td{
     outline: 1px solid rgb(160 160 160);
     text-align: left;
     width: 150px;
-    height: 80px;
+    height: 100px;
 }
 
 
 .calenda{
     text-align: center;
-    font-size: 25px;
+    font-size: 15px;
     padding: 10px;
 }
 
@@ -52,7 +81,7 @@ td{
 
 
 .year_change{
-    width: 300px;
+    width: 150px;
     border-radius: 50%;
     display: grid;
     place-items: center;
@@ -61,10 +90,9 @@ td{
 }
 
 
-#version {
-	color: black;
-	position: fixed;
-	right: 1%;
-	bottom: 0;
-    text-align: end;
+.footer{
+    position: absolute;
+    bottom: 0;
+	right: 20px;
+	font-size: 20px;
 }
