--- a/css/員工資料維護.css
+++ b/css/員工資料維護.css
@@ -1,22 +1,69 @@
 body,html{
-	position: fixed; 
-    left: 50px;
+	height: 100%;
+	padding: 0;
+  	margin: 0;
 }
 
 
-.cpw {
-    display: block;
-    position: relative;
-    width: 100%;
+.wrapper{
+    min-height: 100%;
+}
+
+
+.header{
+	padding: 10px;
+  	background-color: rgb(199, 199, 249);
+}
+
+
+.title{
+	font-size: 75px;
+}
+
+
+.img{
+	float:right;
+	width: 150px;
+}
+
+
+aside{
+    position: absolute;
+}
+
+
+nav{
+    font-size: 35px;
+}
+
+.main{
+    text-align: center;
+    padding: 15px;
+}
+
+
+table{
+    font-size: 50px;
+    border-spacing: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+th {
+    text-align: left;
+}
+
+
+.cpw{
+    width: 500px;
     font-size: 40px;
-    margin-bottom: 25px;
 }
 
 
-#version {
-	color: black;
-	position: fixed;
-	right: 1%;
-	bottom: 0;
-    text-align: end;
+.footer{
+    position: absolute;
+    bottom: 0;
+	right: 20px;
+	font-size: 20px;
 }
