--- a/css/打卡.css
+++ b/css/打卡.css
@@ -1,13 +1,51 @@
 body,html{
-	position: fixed; 
-    left: 50px;
+    height: 100%;
+	padding: 0;
+  	margin: 0;
 }
 
 
-#version {
-	color: black;
-	position: fixed;
-	right: 1%;
-	bottom: 0;
-    text-align: end;
+.wrapper{
+    min-height: 100%;
+}
+
+
+.header{
+	padding: 10px;
+  	background-color: rgb(199, 199, 249);
+}
+
+
+.title{
+	font-size: 75px;
+}
+
+
+.img{
+	float:right;
+	width: 150px;
+}
+
+
+aside{
+    position: absolute;
+}
+
+
+nav{
+    font-size: 35px;
+}
+
+
+.main{
+	text-align: center;
+	padding: 15px;
+}
+
+
+.footer{
+    position: absolute;
+    bottom: 0;
+	right: 20px;
+	font-size: 20px;
 }
