--- a/css/employeeDocumental.css
+++ b/css/employeeDocumental.css
@@ -1,51 +1,13 @@
-body,html{
-    height: 100%;
-	padding: 0;
-  	margin: 0;
-}
-
-
-.wrapper{
-    min-height: 100%;
-}
-
-
-.header{
-	padding: 10px;
-  	background-color: rgb(199, 199, 249);
-}
-
-
-.title{
-	font-size: 75px;
-}
-
-
-.img{
-	float:right;
-	width: 150px;
-}
-
-
-aside{
-    position: absolute;
+header li{
+	margin: 0px 20px;
 }
 
 
 nav{
-    font-size: 35px;
-}
-
-
-.main{
-	text-align: center;
-	padding: 15px;
-}
-
-
-.footer{
-    position: absolute;
-    bottom: 0;
-	right: 20px;
 	font-size: 20px;
+}
+
+
+header img{
+	width: 130px;
 }
