--- a/css/adminInformation.css
+++ b/css/adminInformation.css
@@ -1,86 +1,25 @@
-body,html{
-    height: 100%;
-	padding: 0;
-  	margin: 0;
-}
-
-
-.wrapper{
-    min-height: 100%;
-}
-
-
-.header{
-	padding: 10px;
-  	background-color: rgb(199, 199, 249);
-}
-
-
-.title{
-	font-size: 75px;
-}
-
-
-.img{
-	float:right;
-	width: 150px;
-}
-
-
-aside{
-    position: absolute;
+header li{
+	margin: 0px 20px;
 }
 
 
 nav{
+	font-size: 20px;
+}
+
+
+header img{
+	width: 130px;
+}
+
+
+.search{
+    margin: 10px;
     font-size: 35px;
 }
 
 
-.main{
-    text-align: center;
-    padding: 15px;
-}
-
-
-.search , button{
-    font-size: 170%;
-    line-height: 100%;
-}
-
-
-table{
-    border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
-    font-size: 200%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-#time{
-    text-align: center;
-}
-
-
-th{
-    border: 2px solid rgb(160 160 160);
-    background-color: rgb(228 240 245);
-    text-align: left;
-    width: 500px;
-}
-
-
-td{
-    border: 2px solid rgb(160 160 160);
-    text-align: right;
-    width: 500px;
-}
-
-
-.footer{
-    position: absolute;
-    bottom: 0;
-	right: 20px;
-	font-size: 20px;
+.table{
+    font-size: 25px;
+    border: 1px solid rgb(140 140 140);
 }
