--- a/css/adminReview.css
+++ b/css/adminReview.css
@@ -1,82 +1,26 @@
-body,html{
-    height: 100%;
-	padding: 0;
-  	margin: 0;
-}
-
-
-.wrapper{
-    min-height: 100%;
-}
-
-
-.header{
-	padding: 10px;
-  	background-color: rgb(199, 199, 249);
-}
-
-
-.title{
-	font-size: 75px;
-}
-
-
-.img{
-	float:right;
-	width: 150px;
-}
-
-
-aside{
-    position: absolute;
+header li{
+	margin: 0px 20px;
 }
 
 
 nav{
-    font-size: 35px;
+	font-size: 20px;
 }
 
 
-#list{
-    text-align: center;
-    padding: 15px;
+header img{
+	width: 130px;
 }
 
 
-table{
-    margin-left:auto; 
-    margin-right:auto;
-    border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
-    font-size: 300%;
-}
-
-
-th{
-    background-color: rgb(228 240 245);
-    text-align: left;
-}
-
-
-td{
-    outline: 1px solid rgb(160 160 160);
-    text-align: start;
-}
-
-
-button{
-	font-size: 100%;
+.card{
+    width: 50rem;
+    font-size: 25px;
+    margin-top: 60px;
+    font-weight: bold;
 }
 
 
 .btn{
-    text-align: center;
-}
-
-
-.footer{
-    position: absolute;
-    bottom: 0;
-	right: 20px;
-	font-size: 20px;
+    font-size: 30px;
 }
