--- a/css/index.css
+++ b/css/index.css
@@ -1,113 +1,98 @@
+/* 全局設定 */
 * {
-	text-align: center;
+    text-align: center;
+    box-sizing: border-box;
 }
 
-
-body,html{
-	margin:0;
+body, html {
+    margin: 0;
     padding: 0;
-	height: 100%;
+    height: 100%;
 }
 
-
-.wrapper{
-    min-height: 100%;
-}
-
-
+/* 全螢幕背景 */
 .fullscreen {
-	margin: 0 !important;
-	background-image: url("../img/login.jpg");
-	position: fixed;
-	opacity: 0.85;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 100%;
-	width: 100%;	
+    margin: 0;
+    background: url("../img/login.jpg") center/cover no-repeat;
+    position: fixed;
+    opacity: 0.85;
+    height: 100%;
+    width: 100%;
 }
 
-
+/* 主要內容區塊 */
 .field {
-	margin: 150px 0;
+    margin: 150px 0;
 }
 
-
+/* 標題樣式 */
 h1 {
-	margin: 0 0 50px 0;
-	font-size: 50px;
-	color: white;
-	text-shadow: 0.1em 0.1em 0.2em black;
+    margin-bottom: 50px;
+    font-size: 50px;
+    color: white;
+    text-shadow: 0.1em 0.1em 0.2em black;
 }
 
-
+/* 輸入框樣式 */
 input {
-	/*margin: 10px 0px;*/
-	margin: 0 0 20px 0;
-	width: 200px;
-	height: 20px;
-	font-size: 15px;
-	border: 3px solid orange;
-	border-radius: 5px
+    margin-bottom: 20px;
+    width: 200px;
+    height: 30px;
+    font-size: 15px;
+    border: 3px solid orange;
+    border-radius: 5px;
+    padding: 5px;
 }
 
-
+/* 按鈕樣式 */
 button {
-	width: 80px;
-	height: 40px;
-	font-size: 20px;
-}
-
-
-.inputs {
-	margin: 15px 0 15px 0;
-}
-
-
-p {
-	color: white;
-}
-
-.glow-on-hover {
     width: 220px;
     height: 50px;
+    font-size: 20px;
     border: none;
     outline: none;
-    color: 
-#fff;
-    background: 
-#111;
     cursor: pointer;
+    border-radius: 10px;
+}
+
+/* 輸入框外部容器 */
+.inputs {
+    margin: 15px 0;
+}
+
+/* 文字顏色 */
+p {
+    color: white;
+}
+
+/* 按鈕炫光效果 */
+.glow-on-hover {
+    background: #111;
+    color: #fff;
     position: relative;
     z-index: 0;
-    border-radius: 10px;
+    overflow: hidden;
+    transition: background 0.3s ease-in-out;
 }
 
 .glow-on-hover:before {
     content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
     position: absolute;
     top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
+    left: -2px;
     width: calc(100% + 4px);
     height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
+    background: linear-gradient(45deg, 
+        #ff0000, #ff7300, #fffb00, 
+        #48ff00, #00ffd5, #002bff, 
+        #7a00ff, #ff00c8, #ff0000);
+    background-size: 400%;
+    filter: blur(5px);
+    z-index: -1;
     opacity: 0;
-    transition: opacity .3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
     border-radius: 10px;
-}
-
-.glow-on-hover:active {
-    color: 
-#000
-}
-
-.glow-on-hover:active:after {
-    background: 
-transparent;
+    animation: glowing 20s linear infinite;
 }
 
 .glow-on-hover:hover:before {
@@ -115,20 +100,36 @@ transparent;
 }
 
 .glow-on-hover:after {
-    z-index: -1;
     content: '';
     position: absolute;
     width: 100%;
     height: 100%;
-    background: 
-#111;
+    background: #111;
     left: 0;
     top: 0;
     border-radius: 10px;
+    z-index: -1;
 }
 
+.glow-on-hover:active {
+    color: #000;
+}
+
+/* 版本資訊區塊 */
+.version-info {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    text-align: right;
+}
+
+/* 炫光動畫 */
 @keyframes glowing {
-    0% { background-position: 0 0; }
+    0%, 100% { background-position: 0 0; }
     50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
 }
